--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,36 +11,70 @@
 
 body {
     font-family: "Poppins", sans-serif;
-    background-color: #a4c2d1; /*egg blue*/;
+    background-color: #a4c2d1;
+    /* egg blue */
 }
 
-h1, h2 {
+h1,
+h2 {
     font-family: "DM Serif Display", serif;
-    color: #184f63; /*dark-blue*/;
+    color: #184f63;
+    /* dark-blue */
 }
 
-/*Hero section*/
-#hero {
-    min-height: 500px;
-    background-color: #dbdcde;
-    background-image: url(../images/background.webp);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 50% 70%;
-    padding: 5% 7%;
-}
+/* About section */
 
-/*About*/
 #about {
     background-color: white;
 }
 
-/*Portfolio*/
+/* Portfolio */
+
 #portfolio {
-    background-color: #dbdcde; /*light grey*/;
+    background-color: #dbdcde;
+    /* light grey */
 }
 
-/*Contact section*/
+#portfolio .card-title {
+    color: #1f7798;
+    /* mid blue */
+    font-size: 1.2rem;
+}
+
+#portfolio .btn-outline-secondary:hover {
+    background-color: #1f7798;
+    /* mid blue */
+}
+
+#portfolio .card-text {
+    min-height: 120px;
+}
+
+/* Contact section */
+
 #contact {
     background-color: white;
+}
+
+/* Header */
+
+#hero {
+    background-color: #dbdcde;
+    /* light grey */
+    background-image: url("../images/background.webp");
+    background-size: cover;
+    background-position: 50% 70%;
+    min-height: 500px;
+    padding: 5% 7%;
+}
+
+/* Media queries */
+
+/* Use Bootstrap breakpoint for XL screens */
+@media screen and (min-width: 1200px) {
+
+    /* Fixes all portfolio cards being too tall on xl screens */
+    #portfolio .card-text {
+        min-height: auto;
+    }
 }
