Add custom style to certain  buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,16 +26,26 @@ h2 {
     border-radius: 0;
 }
 
+/*Buttons*/
+.custom-button {
+    background-color: #1f7798;
+    border: #1f7798;
+}
+
+
+.custom-button:hover {
+    background-color: #1d6d8a;
+    border: #1d6d8a;
+}
+
 
 /* About section */
-
 #about {
     background-color: white;
 }
 
 
 /* Portfolio */
-
 #portfolio {
     background-color: #dbdcde;
     /* light grey */
@@ -58,14 +68,12 @@ h2 {
 
 
 /* Contact section */
-
 #contact {
     background-color: white;
 }
 
 
 /* Header */
-
 #hero {
     background-color: #dbdcde;
     /* light grey */
